# Labs

./: .gitignore  README.md
3dCourseS2/Algo/Black'n'WhiteGraph/: Black'n'White.ipynb
3dCourseS2/ComputerGeometry/Geometry/: GenerationSimplePolygon.ipynb
3dCourseS2/ComputerGeometry/UnGeometry/: Untitled.ipynb
3dCourseS2/Crypto/BlockChain/: BlockChain.rar  block.py  blockchain.py  server.json  simulation.py  transaction.py
3dCourseS2/MM/: MM.py
3dCourseS2/Parallel/Parallel/: BMPUtilities.cpp  BMPUtilities.h  Color.cpp  Color.h  Parallel.sln  Parallel.vcxproj  Parallel.vcxproj.filters  main.cpp
3dCourseS2/Unix/Philosophers/: main.cpp
4thCourseS1/EEPM/: Labs.py  Math.py  PriceDemandsSupplies.py
4thCourseS1/Extra/Maze/: MazeGenerator.py
4thCourseS1/InformationTechnology/: application.py  cell.py  column.py  dbcreate.py  image.py  mergetableswindow.py  tablecreate.py  tests.py
4thCourseS1/InformationTechnology/templates/: main.html  newcolumn.html  newdatabase.html  table.html
4thCourseS1/Parallel/: CudaColabMandelbrot.ipynb
4thCourseS1S7/: MazeGenerator.py
4thCourseS1S7/AlgorithmsAnalysis/Lab1/: MatrixMultiplicationN3.py
4thCourseS1S7/EEPM/: EEPM_Lab1_report.docx  Labs.py  Math.py
4thCourseS1S7/InformationTechnology/: application.py  cell.py  cellcontroller.py  client.py  column.py  database.py  databasecontroller.py  datatype.py  dbcreate.py  image.py  mergetableswindow.py  row.py  server.py  simple_users.json  table.py  tablecontroller.py  tablecreate.py  test.json  validators.py  web.py  webapplication.py
4thCourseS1S7/TPR/: Lab1.py
4thCourseS2/ML/: data_generator.py  decision_tree_classifier.py  gaussian_bayes_classifier.py  knn_classifier.py  linear_regression.py  logistic_regression.py  random_forest_classifier.py  utils.py
5thCourseS1/AI/: Cifar_100.ipynb  main_gui.py  neuralnetwork.py
5thCourseS1/Cryptography/: CMakeLists.txt  README.md  aes.py  main.cpp  task.txt
5thCourseS1/Cryptography/Crypto/: AES.cpp  AES.h  CryptoBase.cpp  CryptoBase.h  Kalyna.cpp  Kalyna.h  RC4.cpp  RC4.h  Salsa20.cpp  Salsa20.h
5thCourseS1/Cryptography/Cryptosystems/: BigInt.cpp  BigInt.h  ModuloOperations.cpp  ModuloOperations.h  PrimeChecker.cpp  PrimeChecker.h  RSA.cpp  RSA.h
5thCourseS1/Cryptography/HashFunc/: HashFuncBase.h  Kupyna.cpp  Kupyna.h  SHA256.cpp  SHA256.h
5thCourseS1/Cryptography/Lab1/: CMakeLists.txt  main.cpp
5thCourseS1/Cryptography/Lab1/Crypto/: CryptoBase.h  Kalyna.cpp  Kalyna.h
5thCourseS1/Cryptography/Lab1/test_files/: 1024kb.txt
5thCourseS1/Cryptography/Tests/: AES_tests.cpp  BigInt_tests.cpp  Kalyna_tests.cpp  Kupyna_tests.cpp  RC4_tests.cpp  SHA256_tests.cpp  Salsa20_tests.cpp
5thCourseS1/Cryptography/test_files/: 1kb.txt
5thCourseS1/OS/Communication/: CMakeLists.txt  Common.h  FileTester.cpp  MMapTester.cpp  README.md  SharedTester.cpp
(+100 files in other folders)
